feat: commit authentication
